Alignment fix

--- a/docroot/themes/custom/site_new/css/clean-blog.css
+++ b/docroot/themes/custom/site_new/css/clean-blog.css
@@ -8,7 +8,14 @@
     
     margin-bottom: 12px!important;
 }
+header {position: relative;}
+header .container {
+position: relative;
+}
 
+.cards .field--link a {
+    display: none;
+}
 body {
  font-family: "Riona Sans Regular", sans-serif;
   font-size: 20px;
@@ -154,7 +161,7 @@ hr.small {
   background-size: cover;
   -o-background-size: cover;
   margin-bottom: 140px;
-    height: 710px;
+    height: 100vh;
     overflow: inherit;
 }
 .intro-header .site-heading,
